--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
 name: TitanCommandBlocker
-version: 1.0.0
-api: [3.0.0, 4.0.0]
+version: 1.0.1
+api: 3.0.0
 author: TitaniumLB
 main: TitaniumLB\Blocker\CommandBlocker
